--- a/src/main/resources/hr/algebra/reversi2/gameMain-view.fxml
+++ b/src/main/resources/hr/algebra/reversi2/gameMain-view.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
@@ -33,7 +35,12 @@
         </MenuBar>
     </top>
     <bottom>
-        <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+        <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextArea fx:id="taAllMessages" editable="false" layoutX="20.0" layoutY="15.0" prefHeight="171.0" prefWidth="843.0" />
+            <Button fx:id="btnSendMessage" layoutX="1049.0" layoutY="152.0" mnemonicParsing="false" text="Send Message" />
+            <TextArea fx:id="taSendMessage" layoutX="882.0" layoutY="15.0" prefHeight="126.0" prefWidth="400.0" />
+         </children></Pane>
     </bottom>
     <right>
         <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
